switching from table to list

--- a/animalsort.html
+++ b/animalsort.html
@@ -5,9 +5,9 @@
 </head>
 <body>
 <h1>Chromosome Count in Animals</h1>
-  <table id="animals"></table>
+  <ul id="animals"></ul>
 
 </body>
  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="mysort.js"></script>
+<script type="text/javascript" src="animalsort.js"></script>
 </html>
