--- a/animalsort.html
+++ b/animalsort.html
@@ -9,5 +9,5 @@
 
 </body>
  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="mysort.js"></script>
+<script type="text/javascript" src="animalsort.js"></script>
 </html>
