both sort and shuffle are working and displaying correctly

--- a/animalsort.html
+++ b/animalsort.html
@@ -2,10 +2,15 @@
 <html>
 <head>
   <title>Animal Sort</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 <h1>Chromosome Count in Animals</h1>
   <ul id="animals"></ul>
+  <div id="buttons">
+  <button id="shuffle">Shuffle</button>
+  <button id="sort">Sort</button>
+  </div>
 
 </body>
  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
